# quant-qmt-proxy

./: .gitignore  CLAUDE.md  README.md  config.yml  pyproject.toml  requirements.txt  run.py
app/: config.py  dependencies.py  main.py
app/grpc_services/: trading_grpc_service.py
app/models/: trading_models.py
app/routers/: data.py  trading.py  websocket.py
app/services/: data_service.py  trading_callback_manager.py  trading_service.py
app/utils/: async_utils.py
proto/: trading.proto
scripts/: test_all_interfaces.py  test_remote_api.py
tests/: README.md
tests/grpc/: QUICKREF.md  README.md
tests/rest/: README.md  test_trading_api.py
